[package]
name = "statusinfo2"
version = "0.0.3"
authors = ["eikendev"]
edition = "2018"
description = "A tool to print various metrics of your system."
homepage = "https://github.com/eikendev/statusinfo2"
repository = "https://github.com/eikendev/statusinfo2.git"
readme = "README.md"
license = "ISC"

[dependencies]
anyhow = "1.0.41"
argh = "0.1.4"
directories = "3.0.2"
env_logger = "0.8.4"
glob = "0.3.0"
human-panic = "1.0.3"
log = "0.4.14"
regex = "1.5.4"
