[package]
name = "statusinfo2"
version = "0.0.5"
authors = ["eikendev"]
edition = "2021"
description = "A tool to print various metrics of your system."
homepage = "https://github.com/eikendev/statusinfo2"
repository = "https://github.com/eikendev/statusinfo2.git"
readme = "README.md"
license = "ISC"

[dependencies]
anyhow = "1.0.92"
argh = "0.1.12"
directories = "5.0.1"
env_logger = "0.11.5"
glob = "0.3.1"
human-panic = "2.0.2"
log = "0.4.22"
regex = "1.11.1"
